--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Душевный хостинг - это выгодное размещение вашего сайта, 
   бесперебойная поддержка, высокая скорость и лёгкость в 
   использовании
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/soulhost.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: klimovrv
 github_username:  klimovrv
