--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   бесперебойная поддержка, высокая скорость и лёгкость в 
   использовании
 baseurl: "/soulhost.github.io" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "../" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: klimovrv
 github_username:  klimovrv
 
